Cabal-Version:      2.4
Name:               cardano-smart-contract
Version:            0.0.0.1
Author:             Imagine Team
Maintainer:         sos@imagine.ai
Build-Type:         Simple
Copyright:          (c) 2021 IDYIA LLC dba imagine.ai
License:            Apache-2.0
License-files:      LICENSE

executable contract
    main-is:          Main.hs
    hs-source-dirs:   src/
    other-modules:
        CardanoSmartContract
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0

    build-depends:
        , aeson
        , base              >=4.9 && <5
        , containers
        , data-default
        , freer-extras
        , freer-simple
        , lens
        , playground-common
        , plutus-contract
        , plutus-ledger
        , plutus-pab
        , prettyprinter
        , purescript-bridge
        , row-types
        , servant-purescript
        , text
        , openapi3
        , plutus-tx
        , plutus-tx-plugin
        , plutus-ledger-api
        , ansi-terminal
        , plutus-chain-index
        , plutus-chain-index-core
        , plutus-core
        , bytestring
